--- a/rochesterbeermap/src/styles/main.css
+++ b/rochesterbeermap/src/styles/main.css
@@ -11,11 +11,78 @@
   align-items: center;
 }
 
+.align-items-start {
+  align-items: start;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.content-space-between {
+  justify-content: space-between;
+}
+
 .ml-1 {
   margin-left: 1rem;
+}
+
+.mr-1 {
+  margin-right: 1rem;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.checkbox-container {
+  display: flex;
+}
+
+.checkbox-container label {
+  margin: 0.5rem 1rem 0.25rem 0;
+}
+
+.checkbox-container input {
+  margin-right: 0.5rem;
+}
+
+#submit-brewery-body {
+  margin-top: 3rem;
+}
+
+#suggest-brewery-form {
+  margin-top: 3rem;
 }
 
 #footer {
   padding-top: 1.5rem;
   padding-bottom: 3rem;
+}
+
+#loader {
+  background-color: rgba(10, 10, 10, 0.86);
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 9999;
+}
+
+#loader #icon {
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  color: #fff;
+  height: 100vh;
 }
