--- a/rochesterbeermap/src/styles/main.css
+++ b/rochesterbeermap/src/styles/main.css
@@ -1,71 +1,31 @@
-.hero-body {
-  padding-top: 2rem;
-  min-height: 1000px;
-}
-
-#result-list {
-  margin-top: 2rem;
-}
-
-.align-items-center {
-  align-items: center;
-}
-
-.align-items-start {
-  align-items: start;
-}
-
-.flex-column {
+body {
+  display: flex;
+  min-height: 100vh;
   flex-direction: column;
 }
 
-.content-space-between {
-  justify-content: space-between;
+main {
+  flex: 1 0 auto;
 }
 
-.ml-1 {
-  margin-left: 1rem;
+nav .brand-logo {
+  padding: 0 15px;
 }
 
-.mr-1 {
-  margin-right: 1rem;
-}
-
-.mt-1 {
-  margin-top: 1rem;
-}
-
-.mb-1 {
-  margin-bottom: 1rem;
-}
-
-.w-100 {
-  width: 100%;
+a.active {
+  background-color: #546e7a;
 }
 
 .checkbox-container {
   display: flex;
 }
 
-.checkbox-container label {
-  margin: 0.5rem 1rem 0.25rem 0;
+.checkbox-container p {
+  margin-right: 2rem;
 }
 
-.checkbox-container input {
-  margin-right: 0.5rem;
-}
-
-#submit-brewery-body {
-  margin-top: 3rem;
-}
-
-#suggest-brewery-form {
-  margin-top: 3rem;
-}
-
-#footer {
-  padding-top: 1.5rem;
-  padding-bottom: 3rem;
+#result-list {
+  margin-top: 2rem;
 }
 
 #loader {
@@ -85,4 +45,74 @@
   top: 30%;
   color: #fff;
   height: 100vh;
+}
+
+.notification {
+  padding: 1rem;
+  width: 50%;
+  margin: 2rem auto;
+
+  border-radius: 0.5rem;
+  position: relative;
+}
+
+.notification .content {
+  font-size: 125%;
+}
+
+.notification.success {
+  border: 1px solid #c3e6cb;
+  background: #d4edda;
+}
+
+.notification.success .content {
+  color: #155724;
+}
+
+.notification.error {
+  border: 1px solid #f5c6cb;
+  background: #f8d7da;
+}
+
+.notification.error .content {
+  color: #721c24;
+}
+
+.notification .content strong {
+  margin-right: 0.5rem;
+}
+
+.notification span {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+}
+
+.notification span:hover {
+  cursor: pointer;
+}
+
+/**
+* Search
+*/
+#search-form {
+  width: 75%;
+  margin: 0 auto;
+}
+
+/**
+* Media Queries
+*/
+@media only screen and (max-width: 600px) {
+  .checkbox-container {
+    justify-content: space-evenly;
+  }
+
+  .checkbox-container p {
+    margin-right: 0;
+  }
+
+  #btn-container {
+    text-align: center;
+  }
 }
