--- a/rochesterbeermap/src/styles/app.css
+++ b/rochesterbeermap/src/styles/app.css
@@ -15,6 +15,23 @@ body {
   height: 1000px;
 }
 
+.brand-logo {
+  margin-left: 0.5rem;
+}
+
+.brewery .card-content {
+  height: 300px;
+}
+
+.brewery-information {
+  display: flex;
+  flex-direction: column;
+}
+
+.brewery-information span {
+  margin: 0.25rem 0;
+}
+
 #brewery-list-view {
   overflow-y: scroll;
   max-height: 1000px;
@@ -29,6 +46,7 @@ body {
   max-height: 1000px;
 }
 
+/* Loading Screen */
 #loading-screen-component {
   height: 100vh;
 }
@@ -37,21 +55,30 @@ body {
   margin-top: 25%;
 }
 
+/* Footer */
 #footer {
-  border-top: 1px solid black;
-  margin: 0.5rem 0;
+  margin: 0.5rem 0 0 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
+#footer a {
+  color: #fff;
+}
+
+/* Spinner */
 .spinner {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+/* Helpers */
 .mb-0 {
   margin-bottom: 0px;
 }
 
+/* Media queries */
 @media only screen and (max-width: 600px) {
   #map-view {
     margin-bottom: 2rem;
