--- a/rochesterbeermap/src/styles/app.css
+++ b/rochesterbeermap/src/styles/app.css
@@ -51,7 +51,7 @@ body {
   height: 100vh;
 }
 
-#loading-screen-component #title {
+#loading-screen-component .title {
   margin-top: 25%;
 }
 
@@ -86,5 +86,9 @@ body {
 
   #map-view #map {
     height: 300px;
+  }
+
+  .brewery .card-content {
+    height: 100%;
   }
 }
