--- a/rochesterbeermap/src/styles/app.css
+++ b/rochesterbeermap/src/styles/app.css
@@ -13,10 +13,15 @@ body {
   margin-bottom: 1rem;
   padding: 0 0.5rem;
   height: 1000px;
+  overflow-y: hidden;
 }
 
 .brand-logo {
   margin-left: 0.5rem;
+}
+
+.brewery-detail-view.selected {
+  outline: 2px solid #ff9800;
 }
 
 .brewery .card-content {
@@ -90,5 +95,9 @@ body {
 
   .brewery .card-content {
     height: 100%;
+  }
+
+  #content-container {
+    overflow-y: scroll;
   }
 }
