--- a/rochesterbeermap/src/styles/app.css
+++ b/rochesterbeermap/src/styles/app.css
@@ -107,6 +107,10 @@ body {
 
 /* Media queries */
 @media only screen and (max-width: 600px) {
+  .brand-logo {
+    margin-left: 0;
+  }
+
   #map-view {
     margin-bottom: 2rem;
   }
